# mcd_donalds_automacao

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.py
mcd_donalds/: __init__.py  audit.py  checks.py  cli.py  config.py  context.py  db.py  errors.py  model.py  notify.py  orchestrator.py  quality.py  report.py
mcd_donalds/stages/: extract.py  load.py  transform.py
secrets/: .gitignore  pg_password.example
sql/: 001_mcd_reclamacao.sql  002_pipeline_auditoria.sql
tests/: test_checks.py  test_context.py  test_errors.py  test_extract.py  test_load.py  test_model.py  test_orchestrator.py  test_report.py  test_transform.py
